--- a/Freebies/app/src/main/AndroidManifest.xml
+++ b/Freebies/app/src/main/AndroidManifest.xml
@@ -39,8 +39,10 @@
             android:name=".MapsActivity"
             android:label="@string/title_activity_maps" >
         </activity>
-
-
+        <activity
+            android:name=".AboutActivity"
+            android:label="@string/title_activity_about" >
+        </activity>
     </application>
 
 </manifest>
