--- a/Freebies/app/src/main/AndroidManifest.xml
+++ b/Freebies/app/src/main/AndroidManifest.xml
@@ -23,8 +23,11 @@
             android:name="com.facebook.sdk.ApplicationId"
             android:value="@string/app_id"/>
         <activity
-            android:name=".MainActivity"
-            android:label="@string/app_name" >
+            android:name=".SplashScreen"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait"
+            android:theme="@android:style/Theme.Black.NoTitleBar" >
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -53,6 +56,12 @@
                 "keyboard|keyboardHidden|screenLayout|screenSize|orientation"
             android:theme="@android:style/Theme.Translucent.NoTitleBar"
             android:label="@string/app_name" />
+
+        <!-- Main activity -->
+        <activity
+            android:name=".MainActivity"
+            android:label="@string/app_name" >
+        </activity>
     </application>
 
 </manifest>
